--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Punch</title>
   </head>
   <body>
-    <section class="ff" style="margin: 37px;">
+    <section class="ff" ">
       
       <div style="margin-left: 63%;">
 
